# lights3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
config/: lights3.yaml
docs/: 01-architecture.md  02-http-adapter.md  03-concurrency.md  04-storage-backend.md  05-s3-protocol.md  06-credential-management.md  07-object-read-write-flow.md  08-tiered-storage.md  09-cloudproxy-backend.md  README.md  README.zh-CN.md  architecture.md  cloudproxy-backend.md  concurrency.md  credential-management.md  duostore-backend.md  duostore-rados-data.md  duostore-redis-meta.md  duostore-sqlite-meta.md  http-adapter.md  object-read-write-flow.md  s3-protocol.md  storage-backend.md  tiered-storage.md
src/: main.cc
src/core/: cancel.h  config.cc  config.h  executor.h  log.h  semaphore.h  task.h  thread_pool.cc  thread_pool.h  timer.cc  timer.h
src/core/util/: crypto.cc  crypto.h  hex.h  time.cc  time.h  uri.cc  uri.h
src/http/: model.h  pushpull.h  server.cc  server.h
src/http/drivers/: common.h
src/http/drivers/beast/: beast_server.cc
src/http/drivers/builtin/: builtin_server.cc
src/http/drivers/httplib/: httplib_server.cc
src/http/drivers/seastar/: seastar_server.cc
src/s3/: errors.cc  errors.h  metrics.cc  metrics.h  router.cc  router.h  service.cc  service.h  xml.cc  xml.h
src/s3/auth/: credential_store.cc  credential_store.h  sigv4.cc  sigv4.h
src/s3/handlers/: admin_credentials.cc  buckets.cc  common.h  list_objects.cc  multipart.cc  objects.cc
src/storage/: backend.h  bucket_router.cc  bucket_router.h  listing.cc  listing.h  multipart.cc  multipart.h  registry.cc  registry.h  validate.cc
src/storage/cloudproxy/: cloudproxy_backend.cc  cloudproxy_backend.h  remote_client.cc  remote_client.h
src/storage/duostore/: codec.cc  codec.h  data_ref.h  data_store.h  duostore_backend.cc  duostore_backend.h  fs_data_store.cc  fs_data_store.h  meta_store.h  meta_util.h  rados_data_store.cc  rados_data_store.h  redis_meta_store.cc  redis_meta_store.h  rocks_meta_store.cc  rocks_meta_store.h  sqlite_meta_store.cc  sqlite_meta_store.h
src/storage/localfs/: fs_util.cc  fs_util.h  localfs_backend.cc  localfs_backend.h
src/storage/memory/: memory_backend.cc  memory_backend.h
src/storage/tiered/: tiered_backend.cc  tiered_backend.h
src/storage/xlocalfs/: uring.cc  uring.h  xlocalfs_backend.cc  xlocalfs_backend.h
tests/e2e/: run_e2e.sh
tests/unit/: backend_suite.h  main.cc  meta_store_suite.h  mini_test.h  test_cloudproxy.cc  test_concurrency.cc  test_config.cc  test_credentials.cc  test_duostore.cc  test_duostore_rados.cc  test_duostore_redis.cc  test_duostore_sqlite.cc  test_http_drivers.cc  test_service.cc  test_sigv4.cc  test_storage.cc  test_task.cc  test_tiered.cc  test_xml.cc
